--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@mantine/core": "7.6.1",
     "@mantine/hooks": "7.6.1",
+    "culori": "^4.0.1",
+    "fp-ts": "^2.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0"
